--- a/client/src/styles/components/ListContainer.scss
+++ b/client/src/styles/components/ListContainer.scss
@@ -1,6 +1,8 @@
 @import "../base/settings";
 .ListContainer {
-    padding: $s-size;
-    border: 1px solid $lightest-gray;
-    margin: $s-size;
+    border: none;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 3px;
+    margin-right: 3px;
 }
