--- a/client/src/styles/base/_utility-classes.scss
+++ b/client/src/styles/base/_utility-classes.scss
@@ -98,6 +98,7 @@
   margin: $l-size auto;
   > div {
     margin: $l-size 0;
+    border-radius: 4px;
     background-color: lighten($body-white, 30%);
     border: 1px solid $lightest-gray;
   }
