auth new saves user to req object as well.

--- a/client/src/styles/components/MyListings.scss
+++ b/client/src/styles/components/MyListings.scss
@@ -3,7 +3,8 @@
 
 .MyListings {
   .MyListings__title {
-    text-align: center;
+    padding: 0 $s-size;
+    // text-align: center;
     // background-color: $yad2-orange;
     // color: $whiter-than-body-white;
   }
