skeleton of addlisting

--- a/client/src/styles/base/_utility-classes.scss
+++ b/client/src/styles/base/_utility-classes.scss
@@ -143,3 +143,23 @@
     }
   }
 }
+
+//////////////////////////////
+
+.link-group {
+  border-radius: 5px;
+  overflow: hidden;
+  width: 60%;
+  margin: 0 auto;
+  .link {
+    &:hover {
+      background-color: darken($yad2-orange, 5%);
+    }
+    cursor: pointer;
+    padding: 5px 0px;
+    text-align: center;
+    border: none;
+    color: $body-white;
+    background-color: $yad2-orange;
+  }
+}
