--- a/client/src/styles/components/forms/add-listing/AddListing.scss
+++ b/client/src/styles/components/forms/add-listing/AddListing.scss
@@ -24,6 +24,7 @@
     }
   }
   .AddListing__button {
+    margin-top: $s-size;
     user-select: none;
     &.disabled {
       background-color: gray;
