--- a/client/src/styles/base/_utility-classes.scss
+++ b/client/src/styles/base/_utility-classes.scss
@@ -61,6 +61,8 @@
   .actual-select {
     @include basic-flex;
     background-color: white;
+    box-shadow: inset 0 1px 3px #ddd;
+    border-radius: 4px;
     width: 100%;
     padding: $s-size/2;
     border: 1px solid #dbdbdb;
