--- a/client/src/styles/components/forms/add-listing/AddListing.scss
+++ b/client/src/styles/components/forms/add-listing/AddListing.scss
@@ -6,21 +6,28 @@
   .step:not(.AddListing__active) {
     display: none;
   }
+  .pure-control-group {
+    @include basic-flex(center);
+    .error-message-container {
+      width: 60%;
+    }
+    font-size: $s-size;
+    margin: 5px 0;
+    width: 90%;
+  }
   .AddListing__active {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: $m-size;
     margin: $s-size;
-    background-color: $beige;
-    color: $text-for-beige;
     width: 90%;
     border-radius: 10px;
     min-height: 250px;
     h5 {
       text-align: center;
       margin: 0;
-      margin-bottom: $s-size;
+      margin-bottom: $l-size;
     }
   }
   .AddListing__button {
