Added floor and total floors to address step.

--- a/client/src/styles/components/forms/add-listing/steps/Address.scss
+++ b/client/src/styles/components/forms/add-listing/steps/Address.scss
@@ -17,4 +17,13 @@
       }
     }
   }
+  .Address-floors {
+    @include basic-flex(flex-start);
+    .pure-control-group{
+      width: fit-content;
+      .error-message-container{
+        margin: 0;
+      }
+    }  
+  }
 }
