--- a/client/src/styles/components/forms/add-listing/AddListing.scss
+++ b/client/src/styles/components/forms/add-listing/AddListing.scss
@@ -7,7 +7,8 @@
     display: none;
   }
   .pure-control-group {
-    @include basic-flex(center);
+    @include basic-flex(flex-start);
+    
     .error-message-container {
       width: 60%;
     }
