split select into two components, logically.
all components input-based now.

--- a/client/src/styles/base/_utility-classes.scss
+++ b/client/src/styles/base/_utility-classes.scss
@@ -183,3 +183,15 @@
     background-color: $yad2-orange;
   }
 }
+
+////////////////////////
+
+.disguised__input {
+  border: none !important;
+  background-color: inherit !important;
+  box-shadow: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  color: $def-color !important;
+  cursor: inherit;
+}
