--- a/client/src/styles/components/forms/form-utilities.scss
+++ b/client/src/styles/components/forms/form-utilities.scss
@@ -14,13 +14,13 @@
     justify-content: flex-start !important;
   }
 }
+
 .pure-form-aligned .pure-control-group label {
   flex-shrink: 2;
-  width: 7em;
+  width: 7rem;
   margin-right: 2px;
   margin-left: 2px;
 }
-
 .asterisk {
   content: "* ";
   color: red;
