--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "~base/settings";
 @import "~base/base";
 @import "~base/utility-classes";
+@import "./components/forms/form-utilities.scss";
 @import "purecss-sass/vendor/assets/stylesheets/purecss/_menus.scss";
 @import "purecss-sass/vendor/assets/stylesheets/purecss/_grids-responsive.scss";
 @import "purecss-sass/vendor/assets/stylesheets/purecss/_forms.scss";
