file upload works now.

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -71,6 +71,7 @@ $xl: 1280;
     }
     .link-group {
       max-width: 200px;
+      min-width: 150px;
     }
     .RedirectPrompt__link-group {
       max-width: unset;
