--- a/client/src/styles/base/_utility-classes.scss
+++ b/client/src/styles/base/_utility-classes.scss
@@ -114,7 +114,7 @@
   width: 95vw;
   max-width: 800px;
   margin: $l-size auto;
-  > div {
+  > * {
     margin: $l-size 0;
     border-radius: 4px;
     background-color: lighten($body-white, 30%);
