--- a/client/src/styles/components/ListsContainer.scss
+++ b/client/src/styles/components/ListsContainer.scss
@@ -1,12 +1,26 @@
-@import "../base/settings";
-
-.ItemLists__sorts-and-filters {
-  font-size: $s-size;
-  padding: $s-size/2;
-}
+@import "~base/settings";
+@import "~base/utility-classes";
 
 .ItemLists__lists {
   padding-left: 0;
   padding-right: 0;
   padding-bottom: $s-size;
+}
+
+.ListsContainer__component {
+  font-size: $s-size;
+  padding: $s-size/2;
+  > div {
+    @include basic-flex(center);
+    flex-wrap: wrap;
+    > * {
+      @include basic-flex;
+      > * {
+        padding: $s-size/2;
+        margin: $s-size/2;
+      }
+    }
+    margin: $s-size 0;
+    height: fit-content;
+  }
 }
