--- a/client/src/styles/components/forms/form-utilities.scss
+++ b/client/src/styles/components/forms/form-utilities.scss
@@ -61,12 +61,11 @@
   }
 }
 
-.submit-container {
-  @include basic-flex(center);
+.submit-container,
+.like-submit-container {
   button,
   div {
     cursor: pointer;
-    text-align: center;
     border-radius: 15px;
     border: none;
     padding: $s-size/2;
@@ -76,6 +75,8 @@
   }
   margin: $m-size 0;
 }
+
+
 
 .fields {
   // background-color: $body-white;
